--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -8,11 +8,11 @@
     <div class="layout__box">
       <div class="layout__boxHeader">
         <div class="layout__boxTitle">
-          <h3>Login</h3>
+          <h3>Sign in</h3>
         </div>
       </div>
       <div class="layout__body">
-        <h2 class="auth__tagline">Find your study partner</h2>
+        <h2 class="auth__tagline">Let's talk!</h2>
 
         <form class="form" action="" method="POST">
           {% csrf_token %}
