--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -14,7 +14,7 @@
               </path>
             </svg>
           </a>
-          <h3>Create/Update Study Room</h3>
+          <h3>Create/Update Feedback Room</h3>
         </div>
       </div>
       <div class="layout__body">
@@ -35,12 +35,12 @@
 
 
           <div class="form__group">
-            <label for="room_name">Room Name</label>
+            <label for="room_name">Feedback Room Name</label>
             {{form.name}}
           </div>
 
           <div class="form__group">
-            <label for="room_description">Room Description</label>
+            <label for="room_description">Feedback Description</label>
             {{form.description}}
           </div>
 
