--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -29,14 +29,13 @@
           <a class="btn btn--main btn--pill" href="{% url 'activity' %}">Recent Activities</a>
         </div>
       </div>
-
       <div class="roomList__header">
-        <div>
-          <h2>Study Rooms</h2>
-          <p>{{room_count}} Rooms available</p>
-        </div>
 
-        <a class="btn btn--main" href="{% url 'create-room' %}">
+        <div>
+          <h2>Feedback Rooms</h2>
+          <p>{{room_count}} Opened Feedback list</p>
+        </div>
+            <a class="btn btn--main" href="{% url 'create-room' %}">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
             <title>add</title>
             <path
