--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -30,12 +30,12 @@
         </div>
       </div>
 
-      <div class="roomList__header">
+      {% comment %} <div class="roomList__header">
         <div>
           <h2>Study Rooms Hosted by dennis_ivy</a>
           </h2>
         </div>
-      </div>
+      </div> {% endcomment %}
       {% include 'base/feed_component.html' %}
 
 
