--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --color-main: #71c6dd;
+  --color-main: #ffffff;
   --color-main-light: #e1f6fb;
   --color-dark: #3f4156;
   --color-dark-medium: #51546e;
-  --color-dark-light: #696d97;
-  --color-light: #e5e5e5;
-  --color-gray: #8b8b8b;
+  --color-dark-light: #e96323;
+  --color-light: #ffffff;
+  --color-gray: #ebe2c3;
   --color-light-gray: #b2bdbd;
   --color-bg: #2d2d39;
   --color-success: #5dd693;
@@ -48,7 +48,7 @@ body {
   font-weight: 400;
   font-size: 1.5rem;
   color: var(--color-light-gray);
-  background-color: var(--color-bg);
+  background-color: rgb(36 36 52);
   min-height: 100vh;
 }
 
@@ -97,6 +97,8 @@ a {
 .btn--main {
   background-color: var(--color-main);
   color: var(--color-dark);
+  /* width: 100%; */
+  justify-content: center;
 }
 
 .btn:hover {
@@ -222,6 +224,7 @@ a {
 
 .dropdown-menu.show {
   display: block;
+  z-index: 999;
 }
 
 .dropdown-menu a {
@@ -267,12 +270,21 @@ a {
 
 .header {
   padding: 1.5rem;
-  background-color: var(--color-dark);
+  background-color: #5865f2;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  top: 0;
 }
 
 .header > .container {
   display: flex;
-  gap: 9.5rem;
+  gap: 50px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .header__logo,
@@ -288,7 +300,7 @@ a {
 }
 
 .header__logo > h1 {
-  font-weight: 700;
+  font-weight: 200;
   font-size: 2rem;
   color: var(--color-light);
 }
@@ -371,7 +383,8 @@ a {
 .header__menu svg {
   width: 1.6rem;
   height: 1.6rem;
-  fill: var(--color-dark-light);
+  fill: #000000;
+  z-index: 999;
 }
 
 .dropdown-button {
@@ -390,7 +403,8 @@ a {
 ================================*/
 
 .layout {
-  margin-top: 2.4rem;
+  margin-top: 13rem;
+  margin-bottom: 10rem;
 }
 
 .layout > .container {
@@ -905,6 +919,7 @@ a {
   border-radius: 0.7rem;
   overflow: hidden;
   position: relative;
+  z-index: 998;
 }
 
 @media screen and (max-width: 900px) {
@@ -1162,4 +1177,16 @@ a {
   font-weight: 500;
   color: var(--color-main);
   font-weight: 1.4rem;
+}
+
+
+.paymentsystem{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /*margin-top: 450px;*/
+}
+.paymentsystem:last-child:hover{
+
 }
