--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <title>StudyBuddy - Find study partners around the world!</title>
+    <link rel="stylesheet" href="{% static 'styles/donate.css' %}" />
+    <title>Merlin Bot</title>
 </head>
 
 <body>
@@ -27,7 +28,6 @@
 
 
     {% endblock %}
-
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 
