--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,12 +18,12 @@
           {% csrf_token %}
           <div class="form__group form__group">
             <label for="room_name">Email</label>
-            <input id="username" name="email" type="email" placeholder="e.g. dennis_ivy@email.com />
+            <input id="username" name="email" type="email" placeholder="e-mail">
           </div>
           <div class=" form__group">
             <label for="password">Password</label>
             <input id="password" name="password" type="password"
-              placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" />
+              placeholder="password" />
           </div>
 
           <button class="btn btn--main" type="submit">
