--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/donate.css' %}" />
@@ -22,6 +24,7 @@
 
     {% endblock %}
     <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/donate.js' %}"></script>
 </body>
 
 </html>
