--- a/static/styles/donate.css
+++ b/static/styles/donate.css
@@ -117,7 +117,7 @@ p{
 .option-warp{
     width: 100%;
     height: 600px;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
