--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
     <link rel="stylesheet" href="{% static 'styles/donate.css' %}" />
+    <link rel="stylesheet" href="{% static 'styles/dc.css' %}" />
     <title>Merlin Bot</title>
 </head>
 
